--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "babel-eslint": "^8.2.1",
     "babel-jest": "^22.1.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-module-resolver": "^3.0.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-export-extensions": "^6.22.0",
@@ -74,6 +75,7 @@
     "core-js": "^2.5.3",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.9",
+    "dotenv": "^5.0.0",
     "eslint": "^4.16.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
@@ -108,6 +110,7 @@
     "prettier-stylelint": "^0.4.2",
     "prop-types": "^15.5.10",
     "redux-devtools": "^3.4.1",
+    "redux-saga": "^0.16.0",
     "rimraf": "^2.6.1",
     "sass-loader": "^6.0.6",
     "serve": "^6.4.9",
